tdf#115675: Shape selection was breaking when changing pos/size from sidebar.

Fixes also other potential breakages with the same root cause.

Change-Id: I09b3650189f6edb28ab64652cd411b1dca7dca89
Reviewed-on: https://gerrit.libreoffice.org/51341
Reviewed-by: Aron Budea <aron.budea@collabora.com>
Tested-by: Aron Budea <aron.budea@collabora.com>